# tauri-example

crates/client/: Cargo.toml  build.rs  tauri.conf.json
crates/client/icons/: icon.icns
crates/client/src/: lib.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: app.rs
crates/pile/: Cargo.toml
crates/pile/src/: main.rs
crates/web_server/: Cargo.toml
crates/web_server/src/: lib.rs
crates/web_server/src/handler/: frontend.rs  mod.rs
crates/web_server/src/middleware/: drop_external.rs  mod.rs
