[package]
edition = "2021"
name = "pile"
version = "0.1.0"

[dependencies]
client = {version = "0.1.0", path = "../client"}
web_server = {version = "0.1.0", path = "../web_server"}

clap = {version = "3.2.13", features = ["derive"]}
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"
tokio = {version = "1.20.0", features = ["macros", "rt-multi-thread"]}
